--- a/src/components/f1-dashboard/gauges/GaugeDisplay.module.css
+++ b/src/components/f1-dashboard/gauges/GaugeDisplay.module.css
@@ -1,3 +1,38 @@
+@font-face {
+  font-family: "BungeeShade-Regular";
+  src: url("/fonts/BungeeShade-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "FastOne";
+  src: url("/fonts/FasterOne.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: "Slackey";
+  src: url("/fonts/Slackey.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+.BungeeShade_Regular {
+  font-family: "BungeeShade-Regular", sans-serif;
+}
+
+.FastOne {
+  font-family: "FastOne", sans-serif;
+}
+
+
+.Slackey {
+  font-family: "Slackey", sans-serif;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -7,12 +42,13 @@
 
 .gaugeTitle {
   color: #0c0c0c;
-  font-size: 1rem;
-  font-weight: 600;
+  font-size: 2rem;
+  /* font-weight: 600; */
   text-transform: uppercase;
   letter-spacing: 0.5px;
   text-align: center;
   margin-bottom: 0.5rem;
+
 }
 
 .gaugeWrapper {
@@ -27,11 +63,19 @@
   width: 100%;
   max-width: 280px;
   height: auto;
-  background: radial-gradient(circle at 50% 60%, #111 30%, #000 90%);
-  border-radius: 50%;
-  box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.2),
-    inset 0 -4px 8px rgba(0, 0, 0, 0.8), 0 6px 12px rgba(0, 0, 0, 0.5);
+  /* background: radial-gradient(circle at 50% 60%, #000000f3 15%, #002b60 90%); */
+
+
+
+  /* background :radial-gradient(circle at 50% 55%, #00d71c94 1%, #002b60 95%); */
+  border-radius: 5%;
+
+  /* background: linear-gradient(1deg, #002b60, #00d71c94); */
+  /* box-shadow: inset 0 2px 4px rgba(255, 255, 255, 0.2),
+    inset 0 -4px 8px rgba(0, 0, 0, 0.8), 0 6px 12px rgba(0, 0, 0, 0.5); */
 }
+
+
 
 /* Tick marks for realism */
 .tick {
@@ -72,7 +116,7 @@
 
 .valueLabel {
   font-size: 0.875rem;
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(0, 0, 0, 0.6);
   text-transform: uppercase;
   letter-spacing: 0.05em;
 }
@@ -80,7 +124,7 @@
 .valueAmount {
   font-size: 1rem;
   font-weight: 700;
-  color: #ffffff;
+  color: #000000;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
 
@@ -88,7 +132,8 @@
   display: flex;
   align-items: center;
   gap: 0.25rem;
-  background: rgba(26, 54, 93, 0.9);
+  /* background: rgba(26, 54, 93, 0.9); */
+  background-color: #002b60 ;
   padding: 0.75rem 1rem;
   border-radius: 6px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -96,7 +141,7 @@
 }
 
 .achievementLabel {
-  color: #cbd5e0;
+  color: #f8f8f8;
   font-size: 0.875rem;
   text-transform: uppercase;
   letter-spacing: 0.5px;
@@ -139,16 +184,16 @@
   }
 
   .gaugeTitle {
-    font-size: 1.25rem;
+    font-size: 2.25rem;
     margin-bottom: 0.75rem;
   }
 
   .valueLabel {
-    font-size: 1.125rem;
+    font-size: 1rem;
   }
 
   .valueAmount {
-    font-size: 1.25rem;
+    font-size: 1.7rem;
   }
 
   .achievementLabel {
