--- a/src/components/f1-dashboard/gauges/PointsChest.module.css
+++ b/src/components/f1-dashboard/gauges/PointsChest.module.css
@@ -12,6 +12,12 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "Slackey";
+  src: url("/fonts/Slackey.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
 .BungeeShade_Regular {
   font-family: "BungeeShade-Regular", sans-serif;
 }
@@ -19,6 +25,12 @@
 .FastOne {
   font-family: "FastOne", sans-serif;
 }
+
+
+.Slackey {
+  font-family: "Slackey", sans-serif;
+}
+
 /* .poppins {
   font-family: var(--font-poppins), sans-serif;
 }
@@ -37,6 +49,9 @@
   /* margin: 50px 0; */
   /* padding-right: 200px; */
 }
+
+
+
 
 .container .gridItem:nth-child(1) {
   grid-column: 1;
@@ -80,29 +95,28 @@
 }
 
 .p_available {
-  font-size: 2.3rem;
+  font-size: 2.7rem;
   /* font-weight: 500; */
-  color: #2288f6c3;
+  color: #003d9df5;
   z-index: 10;
   /* font-family: "Roboto", sans-serif; */
 
   /* margin: 0; */
-  margin-bottom: -5%;
+  margin-bottom: -8%;
   text-align: center;
-  text-shadow: -1px -1px 0 #e1e1e1b7, 1px -1px 0 #181818b7, -1px 1px 0 #181818b7,
+  text-shadow: -1px -1px 0 #fffffff5, 1px -1px 0 #f5f5f5ee, -1px 1px 0 #181818b7,
     1px 1px 0 #181818b7, -2px 0px 0 #e1e1e1b7, 2px 0px 0 #e1e1e1b7,
     0px -2px 0 #e1e1e1b7;
 }
 
 .pointsDisplay {
   /* font-family: "Roboto", sans-serif; */
-  font-size: 2.5rem;
+  font-size: 2.7rem;
   font-weight: 600;
   color: #c29250;
   margin-top: -5%;
   z-index: 1;
   /* text-decoration: overline; */
-  text-decoration-color: #9d6b2478;
   /* text-decoration-thickness: 2px; */
   /* text-shadow: 1px 2px 4px rgba(0, 0, 0, 1); */
   /* text-shadow: h-shadow v-shadow blur-radius color; */
@@ -115,13 +129,13 @@
     1px 1px 0 #181818b7, -2px 0px 0 #181818b7, 2px 0px 0 #181818b7,
     0px -2px 0 #181818b7; */
 
-  text-shadow: -1px -1px 0 #e1e1e1b7, 1px -1px 0 #181818b7, -1px 1px 0 #181818b7,
+  text-shadow: -1px -1px 0 #e8e5e5f5, 1px -2px 0 #ffffffe2, -1px 2px 0 #181818b7,
     1px 1px 0 #181818b7, -2px 0px 0 #e1e1e1b7, 2px 0px 0 #e1e1e1b7,
     0px -2px 0 #e1e1e1b7;
 }
 
 /* Mobile layout */
-/* @media (max-width: 768px) {
+@media (max-width: 1025px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -132,7 +146,7 @@
   .gridItem {
     width: 90%;
   }
-} */
+}
 
 /* Chest with Coin Animation */
 .chestWrapper {
