--- a/src/components/f1-dashboard/gauges/GaugeDisplay.module.css
+++ b/src/components/f1-dashboard/gauges/GaugeDisplay.module.css
@@ -41,7 +41,7 @@
 }
 
 .gaugeTitle {
-  color: #0c0c0c;
+  color: #ffffff;
   font-size: 2rem;
   /* font-weight: 600; */
   text-transform: uppercase;
@@ -91,11 +91,11 @@
   filter: drop-shadow(0 0 6px rgba(255, 107, 53, 0.6));
 }
 
-/* Glowing red metallic needle */
+/* Glowing yellow  needle */
 .needle {
   transition: transform 0.8s ease-in-out;
-  stroke: #ff2a00;
-  filter: drop-shadow(0 0 4px rgba(255, 42, 0, 0.8));
+  stroke: #fbff00;
+  filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.932));
 }
 
 /* Values section */
@@ -115,16 +115,16 @@
 }
 
 .valueLabel {
-  font-size: 0.875rem;
-  color: rgba(0, 0, 0, 0.6);
+  font-size: 0.95rem;
+  color: rgb(255, 255, 255);
   text-transform: uppercase;
   letter-spacing: 0.05em;
 }
 
 .valueAmount {
-  font-size: 1rem;
+  font-size: 1.6rem;
   font-weight: 700;
-  color: #000000;
+  color: #ffffff;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
 }
 
@@ -142,16 +142,17 @@
 
 .achievementLabel {
   color: #f8f8f8;
-  font-size: 0.875rem;
+  font-size: 1rem;
+  font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.5px;
 }
 
 .achievementValue {
-  color: #ff6b35;
+  color: #ff5214;
   font-size: 1.5rem;
   font-weight: 700;
-  text-shadow: 0 2px 4px rgba(255, 107, 53, 0.3);
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.719);
 }
 
 /* Medium screens */
@@ -212,5 +213,5 @@
 
 .needle {
   transition: transform 0.8s ease-in-out;
-  filter: drop-shadow(0 0 4px rgba(255, 42, 0, 0.8));
+  filter: drop-shadow(0 0 4px rgb(255, 255, 255));
 }
