--- a/src/components/f1-dashboard/gauges/PointsChest.module.css
+++ b/src/components/f1-dashboard/gauges/PointsChest.module.css
@@ -84,13 +84,15 @@
   align-items: center;
   justify-content: center;
   /* gap: 15px; */
+  border:1px rgba(0, 0, 0, 0.332);
+  border-style: dashed;
 }
 
 .itemTitle {
   font-size: 2.5rem;
   /* font-weight: 600; */
   color: #333;
-  margin-bottom: -6%;
+  margin-bottom: -8%;
   text-align: center;
 }
 
@@ -102,7 +104,7 @@
   /* font-family: "Roboto", sans-serif; */
 
   /* margin: 0; */
-  margin-bottom: -8%;
+  margin-bottom: -6%;
   text-align: center;
   text-shadow: -1px -1px 0 #fffffff5, 1px -1px 0 #f5f5f5ee, -1px 1px 0 #181818b7,
     1px 1px 0 #181818b7, -2px 0px 0 #e1e1e1b7, 2px 0px 0 #e1e1e1b7,
